<resources>
    <string name="app_name">fuel station manager app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="google_icon">Google</string>
    <string name="facebook_icon">Facebook</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="already_have_login">Already Have a Login?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_empty">name cannot be empty!</string>
    <string name="email_empty">email cannot be empty!</string>
    <string name="invalid_email">please enter a valid email address!</string>
    <string name="pwd_empty">password cannot be empty!</string>
    <string name="conf_pwd_empty">confirm password cannot be empty!</string>
    <string name="error_password_match">passwords do not match!</string>


</resources>